PycQED Changelog

Legend:
+ Added feature
* Improved/changed feature, compatible
# Change that breaks existing interface
- Bug fixed
! Known issue / missing feature
. Generic bullet

v0.4 - Work In Progress
# openql_helpers:
    - created class OqlProgram to separate the OpenQl 'Program' from our additional data
    - added support for cqasm compilation
* removed calls to OpenQL's Program.set_sweep_points (which generate an unused ".json" file) from *_oql.py

v0.3 - 20211119
# redesigned DIO timing calibration interface (PR #621):
    . DIO modes now defined in instrument_drivers/library/DIO.py instead of individual instrument drivers
    . usage: see examples/CC_examples/CC_demo_mux.py "DIO.calibrate"
# support for Central Controller software v0.2.2 (older versions not supported)
    . requires OpenQL > 0.8.1.dev4
# removed support for deprecated hardware (PRs #620 and #646)
+ added support for real-time modulation of waveforms for microwave control
+ added support for mixer skewness calibration with real-time modulation
+ added support for virtual-Z gates
+ added multiple methods for parity check calibration and assessment
+ added multiple methods for parallel qubit calibration
. many more undocumented changes

v0.2 - 20191213
. second public release

v0.1 - 20161012
. initial public release