@@ -3,7 +3,10 @@ A collection of cQasm routines that do not fit 'single_qubit_cq.py' and 'multi_q
 FIXME: these files mentioned do not exist yet
 """
 
+from pycqed.measurement.openql_experiments.openql_helpers import OqlProgram, OqlCfg
+
 def nested_rus(
+        oql_cfg: OqlCfg,
         ancilla1_idx: int,
         ancilla2_idx: int,
         data_idx: int,
@@ -12,12 +15,13 @@ def nested_rus(
         echo_delay_inner_rus: int = 1,
         echo_delay_inner_rus_data: int = 1,
         echo_delay_outer_rus: int = 1
-) -> str:
+) -> OqlProgram:
     """
     Nested Repeat Until Success experiment
 
     Args:
-        platf_cfg:
+        platf_cfg
+        name:
         ancilla1_idx:
         ancilla2_idx:
         data_idx:
@@ -38,12 +42,12 @@ def nested_rus(
 
     src = f"""
         # Note:         file generated by {__file__}.py::nested_rus
-        # File:         test_nested_rus_angle_{angle}.cq
+        # File:         {oql_cfg.name}.cq
         # Purpose:      test Repeat Until Success
 
         version 1.2
 
-        pragma @ql.name("test_nested_rus_angle_{angle}")
+        pragma @ql.name("{oql_cfg.name}")
 
         .def
         map qAncilla1 = q[{ancilla1_idx}]
@@ -130,4 +134,6 @@ def nested_rus(
         measure_fb qData
     """
 
-    return src
+    p = OqlProgram(oql_cfg.name, oql_cfg.platf_cfg, output_dir=oql_cfg.output_dir)  # NB: name must be identical to name set by "pragma @ql.name"
+    p.compile_cqasm(src)
+    return p
