@@ -13,6 +13,7 @@ v0.4 - Work In Progress
     - created class OqlProgram to separate the OpenQl 'Program' from our additional data
     - added support for cqasm compilation
 * removed calls to OpenQL's Program.set_sweep_points (which generate an unused ".json" file) from *_oql.py
+. added package 'deprecated' to streamline deprecation
 
 v0.3 - 20211119
 # redesigned DIO timing calibration interface (PR #621):
